# chat

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  LICENSE  README.md  chat.egg-info.lnk  desktop.ini  dist.lnk  requirements.txt  setup.cfg  setup.py  setup2.py  tox.ini
chat/: __init__.py  api.py  apilib.py  app.py  client.py  config.py  database.py  download.py  graph.py  ianswer.py  ianswer2.py  kg.py  kmapi.py  mytools.py  qa.py  qa_graph.py  qa_graph2.py  qa_no_scenes.py  qa_sql.py  reset.py  semantic.py  semantic2.py  server.py  sql.py  sqldb.py  testcase.py  testcompare.py  tts.py  upload.py  user.py  user.txt  word2pinyin.py
chat.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt
chat/api/: __init__.py  __main__.py
chat/conf/: self.conf
chat/data/: answer.xml  answer_standard.xml  item_standard.xml  user.txt
chat/dict/: sensitive_words.txt  stopwords.txt  swords.txt  synonym.txt  synonymdict.txt  tagcount_1.pkl  (+6 more)
docs/: Makefile  make.bat  requirements.txt
tests/: __init__.py  audiomerge.py  batch_test.py  chat.xls  chat_bank.xls  chat_context.xls  chat_hospital.xls  loading.py  new.xls  nlu_sqlite.db  result.txt  scene.xls  test.xls  test_client.py  test_client_bank.py  test_client_hospital.py  test_config.py  test_database.py  test_download.py  test_graph.py  test_graphdb.py  test_ianswer.py  test_kmapi.py  test_kmserver.py  test_mytools.py  test_semantic.py  test_semantic2.py  test_server.py  test_sql.py  test_sqldb.py  test_testcase.py  test_upload.py  test_user.txt  test_userdata.py  test_vec.py  testcase.txt  testcase.xls  testresult.txt
(+98 files in other folders)
