[metadata]
    name = chat
    author = Decalogue
    version = 1.0.4
    author_email = 1044908508@qq.com
    summary = Chat robot based on natural language understanding and machine learning.
    license = MIT
    description = 
        README.md
    home-page = http://pypi.python.org/pypi/chat
    requires-python = >=3.3
    classifiers = 
        Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Natural Language :: English
		Natural Language :: Chinese (Simplified)
        License :: OSI Approved :: MIT License
        Operating System :: Microsoft :: Windows
        Operating System :: POSIX :: Linux
        Operating System :: MacOS :: MacOS X
        Operating System :: Other OS
        Programming Language :: Python :: 3.5

[files]
packages = 
    chat